# payment-processing

./: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: pyci.yml
alembic/: env.py
alembic/versions/: 001_init.py
payment_processing/: config.py  utils.py
payment_processing/api/: __init__.py  config.py  dependencies.py  main.py
payment_processing/api/routers/: __init__.py  payments.py
payment_processing/api/schemas/: __init__.py  payments.py
payment_processing/application/: __init__.py  commands.py  dto.py  handlers.py
payment_processing/domain/: __init__.py  entities.py  enums.py  errors.py  interfaces.py  value_objects.py
payment_processing/infrastructure/: __init__.py
payment_processing/infrastructure/broker/: consumer.py  producer.py  queues.py
payment_processing/infrastructure/db/: __init__.py  enums.py  factory.py
payment_processing/infrastructure/db/models/: __init__.py  outbox.py  payment.py
payment_processing/infrastructure/db/repositories/: __init__.py  outbox.py  payments.py  uow.py
payment_processing/infrastructure/messaging/: __init__.py  broker.py  entities.py  enums.py  event_types.py  outbox_publisher.py  process_payment.py
payment_processing/infrastructure/payment_gateway/: __init__.py  fake_gateway.py
payment_processing/infrastructure/webhook/: __init__.py  notifier.py
payment_processing/services/: __init__.py  payments.py
tests/: conftest.py  test_api.py  test_payments.py
