[project]
name = "payment-processing"
version = "0.1.0"
authors = [{ name = "Mikhail Kokuev" }]
description = "Async payment processing"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "C90"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
