[project]
name = "payment-processing"
version = "0.1.0"
authors = [{ name = "Mikhail Kokuev" }]
description = "Async payment processing"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "fastapi>=0.136.0",
    "faststream[cli,rabbit]>=0.6.7",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[postgresql-asyncpg]>=2.0.49",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.10",
]

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "C90"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
env = [
    "DB_USER=test_user",
    "DB_PASSWORD=test_password",
    "DB_NAME=test_db",
    "DB_HOST=localhost",
    "DB_PORT=5432",
]
